--- a/src/css/media.css
+++ b/src/css/media.css
@@ -87,4 +87,12 @@
         height: 150px;
         width: 280px;
     }
+    body footer{
+        padding: 15px 0;
+    }
+    body footer .copy {
+        margin-top: 10px;
+        font-size: 12px;
+        color: #aaa;
+    }
 }
